<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="defaut">Ceci est un texte par défaut</string>
    <string name="app_name">RéuniUTC</string>
    <string name="action_settings">Settings</string>
    <string name="description">Application UTCéenne de prise de Rendez-vous.</string>
    <string name="login">Votre login UTC</string>
    <string name="memoriser">mémoriser mes identifiants</string>
    <string name="password">Mot de passe</string>
    <string name="logingIn">Se connecter</string>
    <string name="logout">Se déconnecter</string>

    <string name="bold">ceci est un <b>gros</b> mot !</string>
    <string name="logOut">Se déconnecter</string>
    <string name="CreerGroupe">Créer un groupe</string>
    <string name="CreerReu">Créer une réunion</string>
    <string name="VoirEDT">Consulter votre EdT</string>
    <string name="retour">Fermer la page</string>
    <string name="intitule">Intitulé de la réunion</string>
    <string name="reunion_name">Nom de la réunion</string>
    <string name="groupe_name">Nom du groupe</string>
    <string name="descriptif_reunion">Descriptif de la réunion</string>
    <string name="descriptif_name">Descriptif de la réunion</string>
    <string name="membres_groupe">Sélection des membres</string>
    <string name="date_deb">dd/mm/yyyy  hh:mm</string>
    <string name="deb">Début</string>
    <string name="date_fin">dd/mm/yyyy  hh:mm</string>
    <string name="fin">Fin</string>
    <string name="date_duree">Durée (en minutes)</string>
    <string name="Reunionchoix">Trouver un créneau</string>
    <string name="creater">Création de la réunion</string>
    <string name="createg">Création du groupe</string>
    <string name="createdg">Créer le groupe</string>
    <string name="loadingr">Nous sommes en train de chercher des créneaux. Merci de patienter quelques instants...</string>
    <string name="selectr">Veuillez sélectionner un créneau parmi les suivants.</string>
    <string name="selecttitle">Choisissez un créneau</string>
    <string name="participants_groupe">Login des participants, séparés par des virgules :</string>
    <string name="créneaux">Spécifiez les créneaux</string>
    <string name="envoyerMail">Envoyer le mail-push</string>
    <string name="fermer">Retour à l\'accueil</string>
    <string name="choisissezCreneau">Voici les créneaux possibles. Veuillez en sélectionner un.</string>
    <string name="essentiel">Groupe essentiel</string>
    <string name="optionnel">Groupe optionnel</string>

    <string-array name="creneaux">
        <item>Mardi 16/12 (17h30 - 19h30)</item>
        <item>Mercredi 17/12 (19h30 - 21 h 30)</item>
        <item>Mercredi 17/12 (19h30 - 21 h 30)</item>
        <item>Mercredi 17/12 (19h30 - 21 h 30)</item>
        <item>Mercredi 17/12 (19h30 - 21 h 30)</item>
        <item>Mercredi 17/12 (19h30 - 21 h 30)</item>
    </string-array>

    <string-array name="group_arrays">
        <item>Groupe 1</item>
        <item>Groupe 2</item>
        <item>Groupe 3</item>
    </string-array>



</resources>
