<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#4ea28e"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/fieldDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:textColor="#275d90"
        android:text="@string/createg"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/fieldIntitule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textColor="#4ea28e"
        android:text="@string/groupe_name"
        android:textSize="20sp"

        />
    <EditText
        android:id="@+id/fieldGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/groupe_name"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/titleParticipant"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#4ea28e"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:text="@string/participants_groupe"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/fieldLogins"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/buttCreerGroupe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/createdg"
        android:textColor="#275d90"
        />

</LinearLayout>
