<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#4ea28e"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/fieldDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:textColor="#275d90"
        android:text="@string/creater"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/tilteselectr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/selectr"
        android:textColor="#4ea28e"
        android:textSize="20sp"
        />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/creneaux"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:prompt="@string/selecttitle" />

    <Button
        android:id="@+id/btnSelect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/selecttitle"
        android:textColor="#275d90"
        />



</LinearLayout>