<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#4ea28e"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/fieldIntitule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/intitule"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/reunionname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/reunion_name"
        android:layout_gravity="center_horizontal" /> <!-- android:text="@string/storedLogin"  -->

</LinearLayout>
