<?xml version="1.0" encoding="utf-8"?>

<!-- un Layout hérite toujours de la classe abstraite ViewGroup, qui elle-même hérite de View -->
<!-- un Widget hérite également de View -->
<!-- un VieGroup peut contenir un View -->
<!-- donc TOUT peut s'imbriquer -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!-- TAILLES
    match (fill avant la V8): autant de place que le parent
    wrap: le moins de place possible
    dp: sorte de pourcentage de pixels, relatif à l'écran donc "universel" ;-)
    -->

    <!--
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.baptabl.reutc.MainActivity" >
	-->

    <!-- inutile > barre en haut ?
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:padding="2dp"
        android:text="@string/app_name"
        android:textColor="#ff680f"
        android:textSize="25sp"
        tools:context=".MainActivity"
        />
-->
<!--
    <TextView
        android:id="@+id/txtPrez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/description"
        android:textSize="15sp"
        tools:context=".MainActivity"
        />
-->


    <EditText
        android:id="@+id/fieldLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:hint="@string/login"
        /> <!-- android:text="@string/storedLogin"  -->

    <CheckBox
        android:id="@+id/keepLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fieldLogin"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/memoriser"
        android:textStyle="italic"
        android:textSize="12sp"
        android:checked="true"
        />


    <EditText
        android:id="@+id/fieldPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/keepLogin"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />


    <Button
        android:id="@+id/buttLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ThrowConnect"
        android:layout_marginBottom="50dp"
        android:text="@string/logingIn"
        android:textColor="#275d90"
        android:layout_centerHorizontal="true"
        />


    <TextView
        android:id="@+id/ThrowConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="15sp"
        />


</RelativeLayout>

    <!--  CHOIX DES CRÉNEAUX
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
     -->

