<?xml version="1.0" encoding="utf-8"?>

<!-- un Layout hérite toujours de la classe abstraite ViewGroup, qui elle-même hérite de View -->
<!-- un Widget hérite également de View -->
<!-- un VieGroup peut contenir un View -->
<!-- donc TOUT peut s'imbriquer -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!-- TAILLES
    match (fill avant la V8): autant de place que le parent
    wrap: le moins de place possible
    dp: sorte de pourcentage de pixels, relatif à l'écran donc "universel" ;-)
    -->

    <!--
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.baptabl.reutc.MainActivity" >
	-->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#4ea28e"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="ReuniUTC"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/erreurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="Application UTCéenne de prise de rendez-vous"
        android:textSize="20sp"

        />

    <Button
        android:id="@+id/buttCreerGroupe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreerGroupe"
        android:textColor="#275d90"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        />

    <Button
        android:id="@+id/buttCreerReu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreerReu"
        android:textColor="#275d90"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        />

    <Button
        android:id="@+id/buttVoirEDT"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/VoirEDT"
        android:textColor="#275d90"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp" />


    <Button
        android:id="@+id/buttLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/logOut"
        android:textColor="#275d90"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp" />




</LinearLayout>


    <!--  CHOIX DES CRÉNEAUX
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
     -->


